@@ -41,7 +41,9 @@ org.castor.cache.Factories=\
   org.castor.cache.distributed.CoherenceCacheFactory,\
   org.castor.cache.distributed.OsCacheFactory,\
   org.castor.cache.hashbelt.FIFOHashbeltFactory,\
-  org.castor.cache.hashbelt.LRUHashbeltFactory
+  org.castor.cache.hashbelt.LRUHashbeltFactory,\
+  org.castor.cache.distributed.EHCacheFactory,\
+  org.castor.cache.distributed.GigaspacesCacheFactory
   
 # 
 # TransactionManagerFactory implementations
